2004-11-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c: Changed "--keyfile" cmdline opt to "--key-file".

	* src/munged/conf.c: Added "--auth-pipe-dir" cmdline opt.

2004-11-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/auth_recv.c,
	  src/munged/conf.c, src/munged/conf.h:
	  Changed MUNGE_AUTH_PIPE_NAME_PREFIX to MUNGE_AUTH_PIPE_DIR.
	  Changed MUNGE_AUTH_PIPE_NAME_RND_BYTES to MUNGE_AUTH_PIPE_RND_BYTES.
	  Changed conf struct auth_pipe_prefix to auth_pipe_dir.

	* src/munged/conf.c:
	  Changed "--nthreads" cmdline opt to "--num-threads".
	  Tweaked display_help() information.

	* src/munge/munge.c, src/munge/remunge.c, src/munge/unmunge.c:
	  Tweaked display_help() information.

	* src/libcommon/auth_policy.h, src/libcommon/munge_defs.h,
	  src/munged/conf.c: Moved defines from auth_policy.h to munge_defs.h.
	  Renamed AUTH_PIPE_NAME_PREFIX to MUNGE_AUTH_PIPE_NAME_PREFIX.
	  Renamed AUTH_PIPE_NAME_RND_BYTES to MUNGE_AUTH_PIPE_NAME_RND_BYTES.

	* src/libcommon/auth_policy.h:
	  Removed AUTH_PIPE_NAME_MAX_LEN.
	  Changed AUTH_PIPE_NAME_RND_BYTES from 8 to 16.
	* src/libmunge/auth_send.c, src/munged/auth_recv.c:
	  Changed static bufs using AUTH_PIPE_NAME_MAX_LEN to dynamic memory.
	* src/munged/conf.c, src/munged/conf.h:
	  Added auth_pipe_prefix & auth_pipe_rnd_bytes to conf struct.

	* src/libmunge/munge.h:
	  Changed indenting of preprocessor cmds so line begins with '#'.

2004-11-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/work.c(work_queue):
	  Fixed bug where rc was used uninitialized.
	  Do not signal condition if _work_enqueue() fails.

	* src/libcommon/munge_msg.c:
	  Documented maxlen parm in munge_msg_send() and munge_msg_recv().

	* src/libmunge/auth_send.c:
	  Added missing maxlen parm to invocation of munge_msg_recv().
	* src/munged/auth_recv.c:
	  Added missing maxlen parm to invocation of munge_msg_send().

	* : Re-bootstrap'd with automake-1.9.3.

2004-10-29  Chris Dunlap  <cdunlap@llnl.gov>
